quest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quest-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
